2007-01-02  Nurdin Premji  <npremji@redhat.com>

	* StressTestFStack.java: Added.
	* TestFStack.java (multiThreaded): 	Moved some variables here rather than
	global.
	Moved stressfull tests to StressTestFStack.

2006-12-27  Mike Cvet  <mcvet@redhat.com>

	* FCatch.java (trace): Removed, redundant.

2006-12-22  Nurdin Premji  <npremji@redhat.com>

	* Util.java (parsePids): Use more generic Collections Return type.
	(addConsoleOptions): Removed logger argument.
	* StacktraceAction.java (allExistingTasksCompleted): Added log message.

2006-12-22  Mike Cvet  <mcvet@redhat.com>

	* FCatch.java: Added logging.
	(init): Removed code which scanned all processes looking
	for PIDs, and directly get the Proc.
	(stackTrace): Added.
	(toString): Added.
	(getStackTrace): Added.
	(generateStackTrace): Build stack trace into the stackTrace StringBuffer.
	* TestFCatch.java: Added.

2006-12-21  Andrew Cagney  <cagney@redhat.com>

	* Util.java: Use Config's getVersion, instead of VERSION.

2006-12-21  Nurdin Premji  <npremji@redhat.com>

	* StacktraceAction.java (printTasks): Modified to use StringBuffer instead
	of LinkedLists.
	(existingTask): Use generateTaskStackTrace.
	(generateTaskStackTrace): Renamed from storeTask, made public, return
	StringBuffer.

2006-12-21  Mike Cvet  <mcvet@redhat.com>

	* FCatch.java (init): Fixed to work properly with attaching to an 
	already-running process.

2006-12-20  Mike Cvet  <mcvet@redhat.com>

	* FCatch.java: Refactored from FCrash. Committing re: #3733.
	Merged small observers together into main AttachedObserver; handles
	multiple Tasks better.

2006-12-20  Nurdin Premji  <npremji@redhat.com>

	* Util.java (addConsoleOptions): Changed the way logs are set. Now need to 
	pass LOG=LEVEL sets to set specific logs to specific levels.

2006-12-19  Nurdin Premji  <npremji@redhat.com>

	* Util.java: Ran gnu formatter.
	(parsePids): Added.
	(PidParser): Added.	

	* Util.java (addConsoleOptions): Removed short character options.